# G4-FOC

./: .clang-format  .cproject  .gitignore  CMakeLists.txt  dap.cfg  g4-foc.ioc  g4_foc.ioc
.eide/: eide.yml
.github/workflows/: build.yml
.pack/Keil/STM32G4xx_DFP.2.2.0/: Keil.STM32G4xx_DFP.sha1
.pack/Keil/STM32G4xx_DFP.2.2.0/Templates/CubeMX/: CubeMX.csolution.yml
App/: rtos_tasks.c
App/foc_motor/: clarke_park.h  foc_motor.c  foc_motor.h  measure.c
App/pid/: pid.c
App/vofa/: vofa.c  vofa.h
Bsp/: bsp.h
Bsp/ws2812/: ws2812.c  ws2812.h
Core/Inc/: adc.h  cordic.h  main.h  stm32g4xx_it.h  tim.h
Core/Src/: adc.c  cordic.c  dma.c  fdcan.c  gpio.c  main.c  stm32g4xx_it.c  tim.c  usart.c
Drivers/Bsp/: bsp.h
Drivers/Bsp/ws2812/: ws2812.c
FreeRTOS/portable/: CMakeLists.txt
STM32CubeMX/: g4-foc.ioc
STM32CubeMX/Core/Inc/: cordic.h  stm32g4xx_it.h  tim.h
STM32CubeMX/Core/Src/: adc.c  cordic.c  fdcan.c  gpio.c  main.c  stm32g4xx_it.c  syscalls.c  tim.c  usart.c
User/Application/: FreeRTOSConfig.h  includes.h  mc_config.h  rtos_tasks.c
User/Application/Inc/: FreeRTOSConfig.h  foc_motor.h  includes.h  mc_config.h
User/Application/Src/: foc_motor.c  rtos_tasks.c  stm32g4xx_hal_timebase.c
User/Application/foc_motor/: clarke_park.h  foc_motor.c  foc_motor.h
User/Application/pid/: pid.h
User/Application/vofa/: vofa.c  vofa.h
